--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,69 @@
+# Node dependencies
 node_modules/
+
+# Environment files (sensitive)
 .env
+.env.*.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+*.log
+.log.*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Build / output
+dist/
+build/
+out/
+.next/
+.nuxt/
+.parcel-cache/
+.cache/
+
+# Coverage reports
+coverage/
+.nyc_output/
+
+# Test cache
+jest-cache/
+.jest/
+
+# OS files
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# IDE / editor folders
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# Optional npm / pnpm files
+.pnp.cjs
+.pnp.js
+.pnp.loader.mjs
+
+# Temporary files
+*.tmp
+*.temp
+*.swp
+*~
+
+# Uploaded assets / user content
+uploads/
+public/uploads/
+
+# Misc
+*.tgz
+*.bak
+
+# Keep lockfiles in repo (recommended): package-lock.json, yarn.lock
