--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,15 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.4.0",
     "body-parser": "^1.20.3",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "mongoose": "^7.8.7",
+    "multer": "^2.0.2",
     "twilio": "^4.23.0"
   },
   "devDependencies": {
